--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <maven.compiler.target>11</maven.compiler.target>
 </properties>
 <dependencies>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter</artifactId>
+        <version>3.0.6</version>
+    </dependency>
+
     <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-controls</artifactId>
